--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "firebase": "^10.11.0",
     "next": "14.2.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.1.0",
+    "react-otp-input": "^3.1.1",
+    "react-phone-input-2": "^2.15.1",
+    "react-toggle-dark-mode": "^1.1.1"
   },
   "devDependencies": {
+    "encoding": "^0.1.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
