--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^10.11.0",
+    "axios": "^1.6.8",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
