--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rayan-login",
+  "name": "train-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
-    "next": "14.2.2",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.1.0",
+    "react-icons": "^5.2.0",
     "react-otp-input": "^3.1.1",
     "react-phone-input-2": "^2.15.1",
-    "react-toggle-dark-mode": "^1.1.1"
+    "react-toggle-dark-mode": "^1.1.1",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
-    "encoding": "^0.1.13",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
