--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.2.0",
     "react-otp-input": "^3.1.1",
     "react-phone-input-2": "^2.15.1",
+    "react-redux": "^9.1.2",
     "react-toggle-dark-mode": "^1.1.1",
     "redux": "^5.0.1"
   },
