--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
     "react": "^18",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18",
     "react-icons": "^5.2.0",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-otp-input": "^3.1.1",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.2",
