--- a/package.json
+++ b/package.json
@@ -9,20 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.18",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-date-pickers": "^7.5.0",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.11",
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
+    "primereact": "^10.6.5",
     "react": "^18",
     "react-calendar": "^5.0.0",
     "react-dom": "^18",
+    "react-dropdown-input": "^0.1.11",
+    "react-dropdown-select": "^4.11.2",
     "react-icons": "^5.2.0",
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-otp-input": "^3.1.1",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.2",
     "react-toggle-dark-mode": "^1.1.1",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/node": "^20",
